Add jilnk tasks for building native runtime images